app/src/main/java/org/example/parser/.antlr/IqlParser.java
// Generated from /Users/wuchg/iql-parser/app/src/main/java/org/example/parser/Iql.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class IqlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, FN_SUM=3, FN_COUNT=4, FN_STARTOFWEEK=5, DATETIME=6, NUMBER=7, 
		WHITESPACE=8, SCOL=9, DOT=10, OPEN_PAR=11, CLOSE_PAR=12, COMMA=13, EQ=14, 
		STAR=15, CONTAINS=16, NOT_CONTAINS=17, LT=18, LT_EQ=19, GT=20, GT_EQ=21, 
		NOT_EQ=22, K_AFTER=23, K_AND=24, K_ASC=25, K_BEFORE=26, K_BY=27, K_CHANGED=28, 
		K_DESC=29, K_EMPTY=30, K_IN=31, K_IS=32, K_NOT=33, K_NULL=34, K_ON=35, 
		K_OR=36, K_ORDER=37, K_TO=38, K_WAS=39, F_AFFECTED_VERSION=40, F_APPROVALS=41, 
		F_ASSIGNEE=42, F_ATTACHMENTS=43, F_CATEGORY=44, F_COMMENT=45, F_COMPONENT=46, 
		F_CREATED=47, F_CREATED_DATE=48, F_CREATOR=49, F_CUSTOM_FIELD=50, F_CUSTOMER_REQUEST_TYPE=51, 
		F_DATE=52, F_DESCRIPTION=53, F_DUE=54, F_DURATION=55, F_ENVIRONMENT=56, 
		F_EPIC_LINK=57, F_FILTER=58, F_FIX_VERSION=59, F_ISSUE=60, F_ISSUE_KEY=61, 
		F_ISSUE_TYPE=62, F_KEY=63, F_LABEL=64, F_LABELS=65, F_LAST_VIEWED=66, 
		F_LEVEL=67, F_NUMBER=68, F_ORGANIZATION=69, F_ORIGINAL_ESTIMATE=70, F_PARENT=71, 
		F_PRIORITY=72, F_PROJECT=73, F_RANK=74, F_REMAINING_ESTIMATE=75, F_REPORTER=76, 
		F_REQUEST_CHANNEL_TYPE=77, F_REQUEST_LAST_ACTIVITY_TIME=78, F_RESOLUTION=79, 
		F_RESOLUTION_DATE=80, F_RESOLVED=81, F_SLA=82, F_SPRINT=83, F_STATUS=84, 
		F_SUMMARY=85, F_TEXT=86, F_TIME_SPENT=87, F_TYPE=88, F_UPDATED=89, F_USER=90, 
		F_VERSION=91, F_VOTER=92, F_VOTES=93, F_WATCHER=94, F_WATCHERS=95, F_WORK_RATIO=96, 
		IDENTIFIER=97, STRING_LITERAL=98, COMMENT=99, LINE_COMMENT=100, SPACES=101;
	public static final int
		RULE_query = 0, RULE_iql_stmt = 1, RULE_expr = 2, RULE_ordering_term = 3, 
		RULE_operator = 4, RULE_literal_value = 5, RULE_function = 6, RULE_function_name = 7, 
		RULE_function_param = 8, RULE_literal_list = 9, RULE_keyword = 10, RULE_state_name = 11, 
		RULE_field = 12, RULE_compare_dates = 13, RULE_dates = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"query", "iql_stmt", "expr", "ordering_term", "operator", "literal_value", 
			"function", "function_name", "function_param", "literal_list", "keyword", 
			"state_name", "field", "compare_dates", "dates"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'['", "']'", null, null, null, null, null, "' '", "';'", "'.'", 
			"'('", "')'", "','", "'='", "'*'", "'~'", "'!~'", "'<'", "'<='", "'>'", 
			"'>='", "'!='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, "FN_SUM", "FN_COUNT", "FN_STARTOFWEEK", "DATETIME", 
			"NUMBER", "WHITESPACE", "SCOL", "DOT", "OPEN_PAR", "CLOSE_PAR", "COMMA", 
			"EQ", "STAR", "CONTAINS", "NOT_CONTAINS", "LT", "LT_EQ", "GT", "GT_EQ", 
			"NOT_EQ", "K_AFTER", "K_AND", "K_ASC", "K_BEFORE", "K_BY", "K_CHANGED", 
			"K_DESC", "K_EMPTY", "K_IN", "K_IS", "K_NOT", "K_NULL", "K_ON", "K_OR", 
			"K_ORDER", "K_TO", "K_WAS", "F_AFFECTED_VERSION", "F_APPROVALS", "F_ASSIGNEE", 
			"F_ATTACHMENTS", "F_CATEGORY", "F_COMMENT", "F_COMPONENT", "F_CREATED", 
			"F_CREATED_DATE", "F_CREATOR", "F_CUSTOM_FIELD", "F_CUSTOMER_REQUEST_TYPE", 
			"F_DATE", "F_DESCRIPTION", "F_DUE", "F_DURATION", "F_ENVIRONMENT", "F_EPIC_LINK", 
			"F_FILTER", "F_FIX_VERSION", "F_ISSUE", "F_ISSUE_KEY", "F_ISSUE_TYPE", 
			"F_KEY", "F_LABEL", "F_LABELS", "F_LAST_VIEWED", "F_LEVEL", "F_NUMBER", 
			"F_ORGANIZATION", "F_ORIGINAL_ESTIMATE", "F_PARENT", "F_PRIORITY", "F_PROJECT", 
			"F_RANK", "F_REMAINING_ESTIMATE", "F_REPORTER", "F_REQUEST_CHANNEL_TYPE", 
			"F_REQUEST_LAST_ACTIVITY_TIME", "F_RESOLUTION", "F_RESOLUTION_DATE", 
			"F_RESOLVED", "F_SLA", "F_SPRINT", "F_STATUS", "F_SUMMARY", "F_TEXT", 
			"F_TIME_SPENT", "F_TYPE", "F_UPDATED", "F_USER", "F_VERSION", "F_VOTER", 
			"F_VOTES", "F_WATCHER", "F_WATCHERS", "F_WORK_RATIO", "IDENTIFIER", "STRING_LITERAL", 
			"COMMENT", "LINE_COMMENT", "SPACES"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Iql.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public IqlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QueryContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(IqlParser.EOF, 0); }
		public Iql_stmtContext iql_stmt() {
			return getRuleContext(Iql_stmtContext.class,0);
		}
		public QueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IqlListener ) ((IqlListener)listener).enterQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IqlListener ) ((IqlListener)listener).exitQuery(this);
		}
	}

	public final QueryContext query() throws RecognitionException {
		QueryContext _localctx = new QueryContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_query);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(31);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & -1090921691136L) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & 25769803775L) != 0)) {
				{
				setState(30);
				iql_stmt();
				}
			}

			setState(33);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Iql_stmtContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Ordering_termContext ordering_term() {
			return getRuleContext(Ordering_termContext.class,0);
		}
		public Iql_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_iql_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IqlListener ) ((IqlListener)listener).enterIql_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IqlListener ) ((IqlListener)listener).exitIql_stmt(this);
		}
	}

	public final Iql_stmtContext iql_stmt() throws RecognitionException {
		Iql_stmtContext _localctx = new Iql_stmtContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_iql_stmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(35);
			expr(0);
			setState(37);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==K_ORDER) {
				{
				setState(36);
				ordering_term();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExprContext extends ParserRuleContext {
		public TerminalNode OPEN_PAR() { return getToken(IqlParser.OPEN_PAR, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode CLOSE_PAR() { return getToken(IqlParser.CLOSE_PAR, 0); }
		public OperatorContext operator() {
			return getRuleContext(OperatorContext.class,0);
		}
		public FieldContext field() {
			return getRuleContext(FieldContext.class,0);
		}
		public TerminalNode STRING_LITERAL() { return getToken(IqlParser.STRING_LITERAL, 0); }
		public Literal_valueContext literal_value() {
			return getRuleContext(Literal_valueContext.class,0);
		}
		public Literal_listContext literal_list() {
			return getRuleContext(Literal_listContext.class,0);
		}
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public List<TerminalNode> K_NOT() { return getTokens(IqlParser.K_NOT); }
		public TerminalNode K_NOT(int i) {
			return getToken(IqlParser.K_NOT, i);
		}
		public Ordering_termContext ordering_term() {
			return getRuleContext(Ordering_termContext.class,0);
		}
		public TerminalNode K_AND() { return getToken(IqlParser.K_AND, 0); }
		public TerminalNode K_OR() { return getToken(IqlParser.K_OR, 0); }
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IqlListener ) ((IqlListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IqlListener ) ((IqlListener)listener).exitExpr(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		return expr(0);
	}

	private ExprContext expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExprContext _localctx = new ExprContext(_ctx, _parentState);
		ExprContext _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, 4, RULE_expr, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case OPEN_PAR:
				{
				setState(40);
				match(OPEN_PAR);
				setState(41);
				expr(0);
				setState(42);
				match(CLOSE_PAR);
				}
				break;
			case K_NOT:
			case F_AFFECTED_VERSION:
			case F_APPROVALS:
			case F_ASSIGNEE:
			case F_ATTACHMENTS:
			case F_CATEGORY:
			case F_COMMENT:
			case F_COMPONENT:
			case F_CREATED:
			case F_CREATED_DATE:
			case F_CREATOR:
			case F_CUSTOM_FIELD:
			case F_CUSTOMER_REQUEST_TYPE:
			case F_DATE:
			case F_DESCRIPTION:
			case F_DUE:
			case F_DURATION:
			case F_ENVIRONMENT:
			case F_EPIC_LINK:
			case F_FILTER:
			case F_FIX_VERSION:
			case F_ISSUE:
			case F_ISSUE_KEY:
			case F_ISSUE_TYPE:
			case F_KEY:
			case F_LABEL:
			case F_LABELS:
			case F_LAST_VIEWED:
			case F_LEVEL:
			case F_NUMBER:
			case F_ORGANIZATION:
			case F_ORIGINAL_ESTIMATE:
			case F_PARENT:
			case F_PRIORITY:
			case F_PROJECT:
			case F_RANK:
			case F_REMAINING_ESTIMATE:
			case F_REPORTER:
			case F_REQUEST_CHANNEL_TYPE:
			case F_REQUEST_LAST_ACTIVITY_TIME:
			case F_RESOLUTION:
			case F_RESOLUTION_DATE:
			case F_RESOLVED:
			case F_SLA:
			case F_SPRINT:
			case F_STATUS:
			case F_SUMMARY:
			case F_TEXT:
			case F_TIME_SPENT:
			case F_TYPE:
			case F_UPDATED:
			case F_USER:
			case F_VERSION:
			case F_VOTER:
			case F_VOTES:
			case F_WATCHER:
			case F_WATCHERS:
			case F_WORK_RATIO:
			case STRING_LITERAL:
				{
				setState(47);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==K_NOT) {
					{
					{
					setState(44);
					match(K_NOT);
					}
					}
					setState(49);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(52);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case F_AFFECTED_VERSION:
				case F_APPROVALS:
				case F_ASSIGNEE:
				case F_ATTACHMENTS:
				case F_CATEGORY:
				case F_COMMENT:
				case F_COMPONENT:
				case F_CREATED:
				case F_CREATED_DATE:
				case F_CREATOR:
				case F_CUSTOM_FIELD:
				case F_CUSTOMER_REQUEST_TYPE:
				case F_DATE:
				case F_DESCRIPTION:
				case F_DUE:
				case F_DURATION:
				case F_ENVIRONMENT:
				case F_EPIC_LINK:
				case F_FILTER:
				case F_FIX_VERSION:
				case F_ISSUE:
				case F_ISSUE_KEY:
				case F_ISSUE_TYPE:
				case F_KEY:
				case F_LABEL:
				case F_LABELS:
				case F_LAST_VIEWED:
				case F_LEVEL:
				case F_NUMBER:
				case F_ORGANIZATION:
				case F_ORIGINAL_ESTIMATE:
				case F_PARENT:
				case F_PRIORITY:
				case F_PROJECT:
				case F_RANK:
				case F_REMAINING_ESTIMATE:
				case F_REPORTER:
				case F_REQUEST_CHANNEL_TYPE:
				case F_REQUEST_LAST_ACTIVITY_TIME:
				case F_RESOLUTION:
				case F_RESOLUTION_DATE:
				case F_RESOLVED:
				case F_SLA:
				case F_SPRINT:
				case F_STATUS:
				case F_SUMMARY:
				case F_TEXT:
				case F_TIME_SPENT:
				case F_TYPE:
				case F_UPDATED:
				case F_USER:
				case F_VERSION:
				case F_VOTER:
				case F_VOTES:
				case F_WATCHER:
				case F_WATCHERS:
				case F_WORK_RATIO:
					{
					setState(50);
					field();
					}
					break;
				case STRING_LITERAL:
					{
					setState(51);
					match(STRING_LITERAL);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(54);
				operator();
				setState(58);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case DATETIME:
				case NUMBER:
				case IDENTIFIER:
				case STRING_LITERAL:
					{
					setState(55);
					literal_value();
					}
					break;
				case T__0:
				case OPEN_PAR:
					{
					setState(56);
					literal_list();
					}
					break;
				case FN_SUM:
				case FN_STARTOFWEEK:
					{
					setState(57);
					function();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(61);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
				case 1:
					{
					setState(60);
					ordering_term();
					}
					break;
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(73);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(71);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
					case 1:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(65);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(66);
						match(K_AND);
						setState(67);
						expr(5);
						}
						break;
					case 2:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(68);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(69);
						match(K_OR);
						setState(70);
						expr(4);
						}
						break;
					}
					} 
				}
				setState(75);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Ordering_termContext extends ParserRuleContext {
		public TerminalNode K_ORDER() { return getToken(IqlParser.K_ORDER, 0); }
		public TerminalNode K_BY() { return getToken(IqlParser.K_BY, 0); }
		public List<Literal_valueContext> literal_value() {
			return getRuleContexts(Literal_valueContext.class);
		}
		public Literal_valueContext literal_value(int i) {
			return getRuleContext(Literal_valueContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(IqlParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(IqlParser.COMMA, i);
		}
		public List<TerminalNode> K_ASC() { return getTokens(IqlParser.K_ASC); }
		public TerminalNode K_ASC(int i) {
			return getToken(IqlParser.K_ASC, i);
		}
		public List<TerminalNode> K_DESC() { return getTokens(IqlParser.K_DESC); }
		public TerminalNode K_DESC(int i) {
			return getToken(IqlParser.K_DESC, i);
		}
		public Ordering_termContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ordering_term; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IqlListener ) ((IqlListener)listener).enterOrdering_term(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IqlListener ) ((IqlListener)listener).exitOrdering_term(this);
		}
	}

	public final Ordering_termContext ordering_term() throws RecognitionException {
		Ordering_termContext _localctx = new Ordering_termContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_ordering_term);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(K_ORDER);
			setState(77);
			match(K_BY);
			setState(78);
			literal_value();
			setState(80);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				setState(79);
				_la = _input.LA(1);
				if ( !(_la==K_ASC || _la==K_DESC) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				break;
			}
			setState(89);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(82);
					match(COMMA);
					setState(83);
					literal_value();
					setState(85);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
					case 1:
						{
						setState(84);
						_la = _input.LA(1);
						if ( !(_la==K_ASC || _la==K_DESC) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						}
						break;
					}
					}
					} 
				}
				setState(91);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
